update arabic language for form and table fields

--- a/src/app/components/Users/user-form/user-form.component.html
+++ b/src/app/components/Users/user-form/user-form.component.html
@@ -11,173 +11,204 @@
           class="form-control"
           required
           formControlName="fNameAr"
-          placeholder="name@example.com"
+          placeholder=""
           id="fNameAr"
         />
         <label for="fNameAr">الإسم الأول بالعربية</label>
       </div>
-      <div class="col-md-3 col-12 form-group">
-        <label for="secNameAr">الإسم الثانى بالعربية</label>
+      <div class="col-md-3 col-12 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="secNameAr"
+          placeholder=""
+          id="secNameAr"
         />
+        <label for="secNameAr">الإسم الثانى بالعربية</label>
       </div>
-      <div class="col-md-3 col-12 form-group">
-        <label for="thirdNameAr">الإسم الأوسط بالعربية</label>
+      <div class="col-md-3 col-12 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="thirdNameAr"
+          placeholder=""
+          id="thirdNameAr"
         />
+        <label for="thirdNameAr">الإسم الأوسط بالعربية</label>
       </div>
-      <div class="col-md-3 col-12 form-group">
-        <label for="lNameAr">الإسم الأخير بالعربية</label>
+      <div class="col-md-3 col-12 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="lNameAr"
+          placeholder=""
+          id="lNameAr"
         />
+        <label for="lNameAr">الإسم الأخير بالعربية</label>
       </div>
     </div>
     <div class="row mt-3">
-      <div class="col-md-3 col-12 form-group">
-        <label for="fNameEn">الإسم الأول بالإنجليزية</label>
+      <div class="col-md-3 col-12 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="fNameEn"
+          placeholder=""
+          id="fNameEn"
         />
+        <label for="fNameEn">الإسم الأول بالإنجليزية</label>
       </div>
-      <div class="col-md-3 col-12 form-group">
-        <label for="secNameEn">الإسم الثانى بالإنجليزية</label>
+      <div class="col-md-3 col-12 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="secNameEn"
+          placeholder=""
+          id="secNameEn"
         />
+        <label for="secNameEn">الإسم الثانى بالإنجليزية</label>
       </div>
-      <div class="col-md-3 col-12 form-group">
-        <label for="thirdNameEn">الإسم الأوسط بالإنجليزية</label>
+      <div class="col-md-3 col-12 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="thirdNameEn"
+          placeholder=""
+          id="thirdNameEn"
         />
+        <label for="thirdNameEn">الإسم الأوسط بالإنجليزية</label>
       </div>
-      <div class="col-md-3 col-12 form-group">
-        <label for="lNameEn">الإسم الأخير بالإنجليزية</label>
+      <div class="col-md-3 col-12 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="lNameEn"
+          placeholder=""
+          id="lNameEn"
         />
+        <label for="lNameEn">الإسم الأخير بالإنجليزية</label>
       </div>
     </div>
     <div class="row mt-3">
-      <div class="col-md-5 col-3 form-group">
-        <label for="email">البريد الإلكترونى</label>
+      <div class="col-md-5 col-3 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="email"
+          placeholder=""
+          id="email"
         />
+        <label for="email">البريد الإلكترونى</label>
       </div>
-      <div class="col-md-3 col-3 form-group">
-        <label for="countryCode">كود المدينة</label>
+      <div class="col-md-3 col-3 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="countryCode"
+          placeholder=""
+          id="countryCode"
         />
+        <label for="countryCode">كود المدينة</label>
       </div>
-      <div class="col-md-4 col-3 form-group">
-        <label for="mobileNumber">رقم الجوال</label>
+      <div class="col-md-4 col-3 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="mobileNumber"
+          placeholder=""
+          id="mobileNumber"
         />
+        <label for="mobileNumber">رقم الجوال</label>
       </div>
     </div>
     <div class="row mt-3">
-      <div class="col-md-6 col-3 form-group">
-        <label for="birthDate">تاريخ الميلاد</label>
+      <div class="col-md-6 col-3 form-floating">
         <input
           type="text"
           class="form-control"
           required
           formControlName="birthDate"
+          placeholder=""
+          id="birthDate"
         />
+        <label for="birthDate">تاريخ الميلاد</label>
       </div>
-      <div class="col-md-6 col-3 form-group">
-        <label for="nationalId">رقم الهوية</label>
+      <div class="col-md-6 col-3 form-floating">
         <input
-          type="number"
-          min="0"
           class="form-control"
           required
           formControlName="nationalId"
+          placeholder=""
+          id="nationalId"
+          type="number"
         />
+        <label for="nationalId">رقم الهوية</label>
       </div>
     </div>
     <div class="row mt-3">
-      <div class="col-md-6 col-12 form-group">
-        <label for="maritalStatus">الحالة الإجتماعية</label>
+      <div class="col-md-6 col-12 form-floating">
         <select
           type="text"
           class="form-control"
           required
           formControlName="maritalStatus"
+          placeholder=""
+          id="maritalStatus"
         >
-          <option>Test</option>
-          <option>Test</option>
-          <option>Test</option>
+          <option *ngFor="let key of Statues" [value]="StatueList[key]">
+            {{ key }}
+          </option>
         </select>
+        <label for="maritalStatus">الحالة الإجتماعية</label>
       </div>
-      <div class="col-md-6 col-12 form-group">
-        <label for="gender">الجنس</label>
+      <div class="col-md-6 col-12 form-floating">
         <select
           [(ngModel)]="selectedGender"
           type="number"
           class="form-control"
           required
           formControlName="gender"
+          placeholder=""
+          id="gender"
         >
           <option *ngFor="let key of Genders" [value]="GenderList[key]">
             {{ key }}
           </option>
         </select>
+        <label for="gender">الجنس</label>
       </div>
     </div>
-    <div class="col-md-12 col-12 form-group">
-      <label for="addressAr">العنوان باللغة العربية</label>
+    <div class="col-md-12 col-12 mt-3 form-floating">
       <input
         type="text"
         class="form-control"
         required
         formControlName="addressAr"
+        placeholder=""
+        id="addressAr"
       />
+      <label for="addressAr">العنوان باللغة العربية</label>
     </div>
-    <div class="col-md-12 col-12 form-group">
-      <label for="addressEn">العنوان باللغة الإنجليزية</label>
+    <div class="col-md-12 col-12 mt-3 form-floating">
       <input
         type="text"
         class="form-control"
         required
         formControlName="addressEn"
+        placeholder=""
+        id="addressEn"
       />
+      <label for="addressEn">العنوان باللغة الإنجليزية</label>
     </div>
     <div
       class="text-success rounded-3 p-3 mt-3 border"
@@ -186,29 +217,33 @@
       معلومات عن الوظيفة
     </div>
     <div class="row mt-3">
-      <div class="col-md-6 col-12 form-group">
-        <label for="departmentId">الإدارة</label>
+      <div class="col-md-6 col-12 form-floating">
         <input
           type="number"
           min="0"
           class="form-control"
           required
           formControlName="departmentId"
+          placeholder=""
+          id="departmentId"
         />
+        <label for="departmentId">الإدارة</label>
       </div>
-      <div class="col-md-6 col-12 form-group">
-        <label for="jobId">الوظيفة</label>
+      <div class="col-md-6 col-12 form-floating">
         <input
           type="number"
           min="0"
           class="form-control"
           required
           formControlName="jobId"
+          placeholder=""
+          id="jobId"
         />
+        <label for="jobId">الوظيفة</label>
       </div>
     </div>
     <button type="submit" class="btn btn-primary" [disabled]="formData.invalid">
-      Save
+      حفظ
     </button>
   </form>
 </div>
