--- a/src/app/components/Users/user-list/user-list.component.html
+++ b/src/app/components/Users/user-list/user-list.component.html
@@ -52,11 +52,11 @@
     <thead>
       <tr>
         <th>الإسم</th>
-        <th>Mobile</th>
-        <th>Email</th>
-        <th>Job</th>
-        <th>Department</th>
-        <th>Actions</th>
+        <th>رقم الجوال</th>
+        <th>البريد الإلكترونى</th>
+        <th>الوظيفة</th>
+        <th>الإدارة</th>
+        <th>التحكم</th>
       </tr>
     </thead>
 
