--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -3,10 +3,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link fs-4" routerLink="users">Users</a>
+          <a class="nav-link fs-4" routerLink="users">المستخدمين</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link fs-4" routerLink="users/form">Add Product</a>
+          <a class="nav-link fs-4" routerLink="users/form">إضافة مستخدم</a>
         </li>
       </ul>
     </div>
