--- a/src/app/components/Users/user-form/user-form.component.html
+++ b/src/app/components/Users/user-form/user-form.component.html
@@ -173,7 +173,6 @@
       </div>
       <div class="col-md-6 col-12 form-floating">
         <select
-          [(ngModel)]="selectedGender"
           type="number"
           class="form-control"
           required
@@ -218,28 +217,37 @@
     </div>
     <div class="row mt-3">
       <div class="col-md-6 col-12 form-floating">
-        <input
+        <select
           type="number"
-          min="0"
           class="form-control"
           required
           formControlName="departmentId"
           placeholder=""
           id="departmentId"
-        />
+        >
+          <option
+            *ngFor="let department of departments"
+            [value]="department.id"
+          >
+            {{ department.departmentName }}
+          </option>
+        </select>
         <label for="departmentId">الإدارة</label>
       </div>
       <div class="col-md-6 col-12 form-floating">
-        <input
+        <select
           type="number"
-          min="0"
           class="form-control"
           required
           formControlName="jobId"
           placeholder=""
           id="jobId"
-        />
-        <label for="jobId">الوظيفة</label>
+        >
+          <option *ngFor="let job of jobs" [value]="job.id">
+            {{ job.jobName }}
+          </option>
+        </select>
+        <label for="departmentId">الوظيفة</label>
       </div>
     </div>
     <button type="submit" class="btn btn-primary" [disabled]="formData.invalid">
